--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="titulo">
         Spider-man no return Home movie review
     </h1>
-        <div class="btns"><a href="#" >Start</a></div>
+        <a href="#" >Start</a>
     </main>
     <footer>
         <p><a href="#">Luan G S Nacimento</a> ©, 2024. Todos os direitos reservados.</p>
